--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Another fake data generator - except this one does MathJax/LaTeX equations, Markdown, and all other fancy things.",
   "main": "dist/terracottaWarrior.js",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^3.9.1",
+    "seedrandom": "^2.4.0"
+  },
   "devDependencies": {
     "assert": "^1.3.0",
     "del": "^1.2.0",
@@ -14,13 +17,10 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.2.0",
-    "lodash": "^3.9.1",
     "mocha": "^2.2.5",
     "run-sequence": "^1.1.0",
-    "seedrandom": "^2.4.0",
     "vinyl-buffer": "^1.0.0"
   },
-  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kenlimmj/terracotta-warrior.git"
